--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ lang: en
 
 
 # Change to your timezone › http://www.timezoneconverter.com/cgi-bin/findzone/findzone
-timezone: British Summer Time
+timezone: Europe/London
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
@@ -46,7 +46,7 @@ social:
     - https://github.com/TeslaWasRobbed      # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
-     - https://www.linkedin.com/in/username
+    - https://www.linkedin.com/in/username
 
 google_site_verification:               # fill in to your verification string
 
