--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ social:
     - https://github.com/TeslaWasRobbed      # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
-    - https://www.linkedin.com/in/username
+    - https://www.linkedin.com/in/nathan-gardner-101b75220/
 
 google_site_verification:               # fill in to your verification string
 
@@ -81,7 +81,7 @@ theme_mode:   # [light|dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar: 
+avatar: https://media.licdn.com/dms/image/D4E35AQGhYT_lPeH3BA/profile-framedphoto-shrink_400_400/0/1677493284674?e=1678482000&v=beta&t=cZfQ0yQZjqDtrcSqcSYxf9hbdX5nHS7RHWE_4BUZjuU
 
 # boolean type, the global switch for ToC in posts.
 toc: true
